<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/dp_5">

    <ImageView
        android:id="@+id/circle_icon"
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_56"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_5"
        android:src="@mipmap/jy_icon_resume" />

    <TextView
        style="@style/circle_tips_title"
        android:id="@+id/circle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/circle_icon"
        android:text="@string/circle_title" />

    <TextView
        style="@style/circle_tips_content"
        android:id="@+id/circle_user_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle_name"
        android:layout_toEndOf="@+id/circle_icon"
        android:text="@string/circle_tips" />

    <TextView
        style="@style/circle_tips_content"
        android:id="@+id/circle_tips_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle_name"
        android:layout_toEndOf="@+id/circle_user_number"
        android:text="@string/circle_tips" />


    <Button
        style="@style/button"
        android:id="@+id/circle_selected"
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_28"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/red_line"
        android:text="@string/selected"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>