<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/view_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_selector"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5">

                <ImageView
                    android:id="@+id/user_head"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
					android:layout_margin="@dimen/dp_10"
                    android:src="@mipmap/header" />

                <TextView
                    android:id="@+id/user_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toEndOf="@+id/user_head"
                    android:text="@string/nick_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/user_uid"
                    style="@style/txt_ContextStyle1"
                    android:layout_below="@+id/user_nick_name"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/user_head"
                    android:text="@string/user_uid"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/user_edit_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:src="@mipmap/icon_right"
                    android:clickable="true"/>

                <TextView
                    android:background="@color/blue_200"
                    android:id="@+id/user_level"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_22"
                    android:text="@string/user_level"
                    android:layout_toRightOf="@+id/user_nick_name"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/fitness_data"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_photo"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:text="@string/fitness_data"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/user_info_edit"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_photo"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:text="@string/user_account"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_money"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_money"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:text="@string/about_us"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_card"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_card"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:text="@string/user_feedback"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_smail"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_smail"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:text="@string/update"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_setting"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_setting"
                android:drawableRight="@mipmap/icon_right"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/settings"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>