<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_custom_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/user_details_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18">

                <TextView
                    android:id="@+id/details_header"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_16"
                    android:text="@string/header"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_info_header"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_70"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:src="@mipmap/header" />

                <ImageView
                    android:id="@+id/edit_init_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:layout_marginStart="@dimen/dp_12"
                android:background="@color/black2" />

            <RelativeLayout
                android:id="@+id/user_details_nick_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_nicky"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_16"
                    android:text="@string/nicky_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_16"
                    android:text="@string/nick_name"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/edit_init"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <RelativeLayout
                android:id="@+id/user_details_clazz_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_usersafe"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_10"
                    android:text="@string/class_title"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/class_content"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/edit_init_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <RelativeLayout
                android:id="@+id/user_details_level_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_msgtip"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_10"
                    android:text="@string/level_title"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_10"
                    android:text="@string/user_level"
                    android:textSize="@dimen/sp_16" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <RelativeLayout
                android:id="@+id/user_details_info_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_yinsi"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:background="@drawable/setting_item_selector"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_10"
                    android:text="@string/more"
                    android:textSize="@dimen/sp_16" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <Button
                android:id="@+id/btnexit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@drawable/btn_bg_red2"
                android:padding="@dimen/dp_10"
                android:text="退出登录"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>